# ChangeLog for app-misc/mucommander
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jun 2013; johann@j-schmitz.net +files/0.9.0-fix-s3impl.patch, metadata.xml,
  mucommander-0.9.0.ebuild:
  Added support for amazon s3 via jets3t