@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>jlec@j-schmitz.net</email>
-		<name>Justin Lecher (jlec)</name>
-	</maintainer>
-	<maintainer>
-		<email>johann@j-schmitz.net</email>
-		<name>Johann Schmitz</name>
-	</maintainer>
-	<use>
-	    <flag name="s3">Adds support for the Amazon S3 storage system</flag>
-	</use>
+  <maintainer>
+    <email>jlec@j-schmitz.net</email>
+    <name>Justin Lecher (jlec)</name>
+  </maintainer>
+  <maintainer>
+    <email>johann@j-schmitz.net</email>
+    <name>Johann Schmitz</name>
+  </maintainer>
+  <use>
+    <flag name="s3">Adds support for the Amazon S3 storage system</flag>
+  </use>
 </pkgmetadata>
-
