@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Nov 2013; Justin Lecher <jlec@gentoo.org> mucommander-0.9.0.ebuild,
+  metadata.xml:
+  Fix dep slotting
+
   20 Jun 2013; johann@j-schmitz.net +files/0.9.0-fix-s3impl.patch, metadata.xml,
   mucommander-0.9.0.ebuild:
   Added support for amazon s3 via jets3t
